[gd_scene load_steps=5 format=3 uid="uid://ct0714im0xfkk"]

[ext_resource type="Texture2D" uid="uid://qdpw0oinfomr" path="res://Assets/9762374.jpg" id="1_fh3cs"]
[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_pmslm"]
[ext_resource type="Texture2D" uid="uid://l3afkfohjxih" path="res://Assets/Agile Hero Logo Huge.png" id="2_jo8aw"]
[ext_resource type="PackedScene" uid="uid://b2esfymr1vcdn" path="res://scenes/main.tscn" id="2_omclw"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("menu_btn", "room_name", "room_name_input", "error_label")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pmslm")
menu_btn = NodePath("Menu_btn")
room_name = NodePath("Rooms")
room_name_input = NodePath("Rooms/room_name")
error_label = NodePath("Rooms/error_label")
main_game = ExtResource("2_omclw")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(976, 584)
scale = Vector2(0.668, 0.668)
texture = ExtResource("1_fh3cs")

[node name="Logo" type="Sprite2D" parent="."]
position = Vector2(960, 208)
scale = Vector2(0.388889, 0.388889)
texture = ExtResource("2_jo8aw")

[node name="Menu_btn" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Host_btn" type="Button" parent="Menu_btn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 780.0
offset_top = 456.0
offset_right = 1100.0
offset_bottom = 584.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Host"

[node name="exit_btn" type="Button" parent="Menu_btn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 780.0
offset_top = 612.0
offset_right = 1100.0
offset_bottom = 740.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Exit"

[node name="Rooms" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="room_name_label" type="Label" parent="Rooms"]
layout_mode = 1
anchors_preset = -1
anchor_left = 24.0
anchor_top = 10.4
anchor_right = 24.0
anchor_bottom = 10.4
offset_left = -256.0
offset_top = -3.05176e-05
offset_right = 252.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Enter room name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="start_btn" type="Button" parent="Rooms"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 780.0
offset_top = 684.0
offset_right = 1100.0
offset_bottom = 812.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="back_btn" type="Button" parent="Rooms"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 780.0
offset_top = 840.0
offset_right = 1100.0
offset_bottom = 968.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Back"

[node name="error_label" type="Label" parent="Rooms"]
layout_mode = 0
offset_left = 640.0
offset_top = 632.0
offset_right = 1280.0
offset_bottom = 696.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="room_name" type="LineEdit" parent="Rooms"]
layout_mode = 0
offset_left = 640.0
offset_top = 512.0
offset_right = 1280.0
offset_bottom = 608.0
theme_override_font_sizes/font_size = 30
alignment = 1
context_menu_enabled = false
caret_blink = true

[connection signal="mouse_entered" from="Menu_btn/Host_btn" to="." method="mouse_enter_button_sfx"]
[connection signal="pressed" from="Menu_btn/Host_btn" to="." method="mouse_click_button_sfx"]
[connection signal="pressed" from="Menu_btn/Host_btn" to="." method="show_room_name"]
[connection signal="mouse_entered" from="Menu_btn/exit_btn" to="." method="mouse_enter_button_sfx"]
[connection signal="pressed" from="Menu_btn/exit_btn" to="." method="mouse_click_button_sfx"]
[connection signal="pressed" from="Menu_btn/exit_btn" to="." method="exit_btn"]
[connection signal="mouse_entered" from="Rooms/start_btn" to="." method="mouse_enter_button_sfx"]
[connection signal="pressed" from="Rooms/start_btn" to="." method="mouse_click_button_sfx"]
[connection signal="pressed" from="Rooms/start_btn" to="." method="start_game"]
[connection signal="mouse_entered" from="Rooms/back_btn" to="." method="mouse_enter_button_sfx"]
[connection signal="pressed" from="Rooms/back_btn" to="." method="mouse_click_button_sfx"]
[connection signal="pressed" from="Rooms/back_btn" to="." method="back_to_main"]
